--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,41 @@
+[tool.poetry]
+name = "RoundBox"
+version = "0.1.0"
+description = "A small lightweight framework for IoT applications"
+authors = ["Zaharia Constantin <layout.webdesign@gmail.com>"]
+repository = "https://github.com/soulraven/roundbox"
+documentation = "https://soulraven.github.io/roundbox/"
+readme = "README.md"
+keywords = ['roundbox', 'template', 'poetry']
+packages = [
+  {include = "RoundBox"}
+]
+include = [
+  '{{roundbox.project_name}}/**/*',
+  'roundbox.json',
+  'hooks/*'
+]
+
+[tool.poetry.dependencies]
+python = ">=3.7,<4.0"
+
+[tool.poetry.dev-dependencies]
+pytest = "^7.1.1"
+isort = "^5.10.1"
+black = "^22.3.0"
+pytest-cookies = "^0.6.1"
+tox = "^3.25.0"
+mkdocs = "^1.3.0"
+mkdocs-material = "^8.2.9"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.black]
 skip-string-normalization = true
 line_length = 99
-target_version = ['py38']
+target_version = ['py310']
 include = '\.pyi?$'
 exclude = '''
 (
