--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
+mkdocs-material = "^8.2.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
