Run local make lint and format

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,3 +51,6 @@ max-line-length = 88
 extend-ignore =
     # See https://github.com/PyCQA/pycodestyle/issues/373
     E203,
+
+[isort]
+profile = black
