--- a/.github/workflows/on-release-main.yml
+++ b/.github/workflows/on-release-main.yml
@@ -64,7 +64,7 @@ jobs:
             poetry version $RELEASE_VERSION
             make build-and-publish
           env:
-            PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+            PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
             RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
 
   documentation:
