--- a/.github/workflows/on-merge-to-main.yml
+++ b/.github/workflows/on-merge-to-main.yml
@@ -1,9 +1,9 @@
 on:
-    push:
-        branches:
-            - main
-        tags-ignore:
-            - '**'
+  push:
+    branches:
+      - main
+    tags-ignore:
+      - '**'
 
 name: merge-to-main
 
@@ -30,7 +30,7 @@ jobs:
     needs: quality
     strategy:
       matrix:
-        python-version: ['3.10']
+        python-version: [ '3.10' ]
     steps:
 
       - name: Check out
@@ -46,3 +46,18 @@ jobs:
           source .venv/bin/activate
           poetry add tox-gh-actions
           tox
+
+  documentation:
+    runs-on: ubuntu-latest
+    needs: quality
+    steps:
+
+      - name: Check out
+        uses: actions/checkout@v2
+
+      - name: Deploy docs
+          uses: mhausenblas/mkdocs-deploy-gh-pages@nomaterial
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            CONFIG_FILE: mkdocs.yml
+            EXTRA_PACKAGES: build-base
