Refactor the GitHub on-merge-to-main.yml action to include the gh-pages

--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+/.idea/
+
+# prevent the reposoitory to push any scerets from this folder
+secrets/
