--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,32 +4,54 @@ site_url: https://soulraven.github.io/roundbox
 site_description: A small lightweight framework for IoT applications
 site_author: Zaharia Constantin
 copyright: Maintained by <a href="https://progeek.ro">SoulRaven</a>.
+site_dir: "site"
 edit_uri: ""
+
 nav:
-  - Home: index.md
-  - Jobs: jobs/jobs_scheduling.md
-  - Libraries: libraries.md
-  - About:
+  - Home:
+    - Overview: index.md
     - Changelog: changelog.md
+    - Credits: credits.md
     - License: license.md
+    - Libraries: libraries.md
+#  - Code Reference: reference/
+#  - Dev:
+#    - Coverage report: coverage.md
+  - Jobs: jobs/jobs_scheduling.md
+  - Author's website: https://soulraven.github.io/
+
 plugins:
   - search
+  - coverage
+  - gen-files:
+      scripts:
+      - docs/gen_credits.py
+      - docs/gen_ref_nav.py
+  - literate-nav:
+      nav_file: SUMMARY.md
 
 theme:
   name: material
   feature:
-    tabs: True
+    - navigation.tabs
+    - navigation.top
   palette:
-    - scheme: default
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
       toggle:
         icon: material/brightness-4
         name: Switch to dark mode
-    - scheme: slate
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
       toggle:
         icon: material/brightness-7
         name: Switch to light mode
   features:
     - navigation.tabs
+
+extra_css:
+- css/material.css
+- css/mkdocstrings.css
 
 extra:
   generator: true
@@ -40,6 +62,14 @@ extra:
 
 
 markdown_extensions:
+  - admonition
+  - pymdownx.emoji
+  - pymdownx.magiclink
+  - pymdownx.snippets:
+      check_paths: true
+  - pymdownx.superfences
+  - pymdownx.tabbed
+  - pymdownx.tasklist
   - toc:
       permalink: true
   - pymdownx.arithmatex:
