--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,5 @@
+[project]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
@@ -26,6 +28,12 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
 mkdocs-material = ">=8.2.9"
+mkdocs-coverage = "^0.2.5"
+mkdocs-literate-nav = "^0.4.1"
+mkdocs-gen-files = "^0.3.4"
+mkdocs = "^1.3.0"
+toml = "^0.10.2"
+coverage = "^6.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
