--- a/tox.ini
+++ b/tox.ini
@@ -12,3 +12,7 @@ whitelist_externals = poetry
 commands =
     poetry install -v
     pytest --doctest-modules tests
+
+[isort]
+profile = black
+multi_line_output = 3
