--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,7 @@ slugify>=0.0.1
 mkdocs>=1.3.0
 mkdocs-material>=8.2.9
 mkdocs-gen-files>=0.3.4
+mkdocs-literate-nav>=0.4.1
+mkdocs-coverage>=0.2.5
 toml>=0.10.2
 coverage>=6.3.2
