Changes in setup.py setup.cfg and pyproject.toml files

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,10 @@ install_requires =
 tests_require =
     pytest
 
+[options.entry_points]
+console_scripts =
+    roundbox-admin = RoundBox.core.cliparser:exec_from_cli
+
 [options.extras_require]
 loguru =
     loguru
@@ -45,6 +49,7 @@ all =
     sentry_sdk
 
 [flake8]
+exclude = build,.git,.tox,./tests/.env
 # Recommend matching the black line length (default 88),
 # rather than using the flake8 default of 79:
 max-line-length = 88
