--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ mkdocs-gen-files = "^0.3.4"
 mkdocs = "^1.3.0"
 toml = "^0.10.2"
 coverage = "^6.3.2"
+slugify = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
@@ -49,6 +50,7 @@ mkdocs-material = "^8.2.9"
 [tool.poetry.plugins]
 
 [tool.poetry.scripts]
+roundbox-admin = "RoundBox.core.cliparser:exec_from_cli"
 
 [tool.poetry.urls]
 "Source" = "https://github.com/soulraven/roundbox"
