Changes in the pyproject.toml file and testing the deploy env

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ projects_urls =
     Issues = https://github.com/soulraven/roundbox/issues
     Discussions = https://github.com/soulraven/roundbox/discussions
     Documentation = https://soulraven.github.io/roundbox/
-    Changelog = https://github.com/althonos/soulraven/blob/master/CHANGELOG.md
+    Changelog = https://github.com/soulraven/roundbox/blob/master/CHANGELOG.md
 
 [options]
 python_requires = >= 3.10
@@ -42,7 +42,9 @@ install_requires =
     requests
     setproctitle
     unicode_slugify
-
+setup_requires =
+    black
+    isort
 [options.entry_points]
 console_scripts =
     roundbox-admin = RoundBox.core.cliparser:exec_from_cli
@@ -58,9 +60,6 @@ docs =
 tests =
     pytest
     pytest-cookies
-lint =
-    black
-    isort
 coverage =
     coverage
     pre-commit
@@ -72,8 +71,6 @@ universal = true
 formats = zip, gztar
 
 [flake8]
-# Recommend matching the black line length (default 88),
-# rather than using the flake8 default of 79:
 max-line-length = 88
 exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
 extend-ignore =
@@ -83,3 +80,5 @@ doctests = True
 
 [isort]
 profile = black
+py_version = 310
+
