--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ projects_urls =
     Issues = https://github.com/soulraven/roundbox/issues
     Discussions = https://github.com/soulraven/roundbox/discussions
     Documentation = https://soulraven.github.io/roundbox/
-    Changelog = https://github.com/soulraven/roundbox/blob/main/CHANGELOG.md
+    Releases = https://soulraven.github.io/roundbox/releases
 
 [options]
 python_requires = >= 3.10
