--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "RoundBox"
-version = "2022.4.22"
+version = "1.0"
 description = "A small lightweight framework for IoT applications"
 authors = ["Zaharia Constantin <layout.webdesign@gmail.com>"]
 license = "LICENSE.md"
@@ -36,28 +36,29 @@ include = [
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
-watchdog = ">=2.1.7; python_version >= 3.10"
+watchdog = ">=2.1.8; python_version >= 3.10"
 colorama = ">=0.4.4; python_version >= 3.10"
-toml = "^0.10.2"
 slugify = "^0.0.1"
-pre-commit = "^2.19.0"
 
 [tool.poetry.dev-dependencies]
-mkdocs = "^1.3.0"
-mkdocs-material = ">=8.2.9"
-mkdocs-coverage = "^0.2.5"
-mkdocs-literate-nav = "^0.4.1"
-mkdocs-gen-files = "^0.3.4"
-mkdocs-material-extensions = "^1.0.3"
 isort = "^5.10.1"
 black = "^22.3.0"
 pytest = "^7.1.1"
 pytest-cookies = "^0.6.1"
 tox = "^3.25.0"
-coverage = "^6.3.2"
+toml = "^0.10.2"
+coverage = "^6.4"
+mkdocs = "^1.3.0"
+mkdocs-material = ">=8.2.15"
+mkdocs-coverage = "^0.2.5"
+mkdocs-literate-nav = "^0.4.1"
+mkdocs-gen-files = "^0.3.4"
+mkdocs-material-extensions = "^1.0.3"
+pre-commit = "^2.19.0"
 
 [tool.poetry.extras]
 mkdocs = [
+    "toml",
     "mkdocs",
     "mkdocs-material",
     "mkdocs-coverage",
@@ -78,6 +79,7 @@ roundbox-admin = "RoundBox.core.cliparser:exec_from_cli"
 "Issues" = "https://github.com/soulraven/roundbox/issues"
 "Discussions" = "https://github.com/soulraven/roundbox/discussions"
 "Documentation" = "https://soulraven.github.io/roundbox/"
+"Changelog" = "https://github.com/soulraven/roundbox/blob/main/CHANGELOG.md"
 
 [tool.black]
 line_length = 88
