--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,11 +49,14 @@ tox = "^3.25.0"
 toml = "^0.10.2"
 coverage = "^6.4"
 mkdocs = "^1.3.0"
-mkdocs-material = ">=8.2.15"
+mkdocs-material = ">=8.2.16"
 mkdocs-coverage = "^0.2.5"
 mkdocs-literate-nav = "^0.4.1"
 mkdocs-gen-files = "^0.3.4"
 mkdocs-material-extensions = "^1.0.3"
+mkdocs-awesome-pages-plugin = ">=2.7.0"
+mkdocs-autolinks-plugin = ">=0.5.0"
+mkdocs-pagenav-generator = {git = "https://github.com/Andre601/mkdocs-pagenav-generator", branch = "main"}
 pre-commit = "^2.19.0"
 
 [tool.poetry.extras]
@@ -64,7 +67,10 @@ mkdocs = [
     "mkdocs-coverage",
     "mkdocs-literate-nav",
     "mkdocs-gen-files",
-    "mkdocs-material-extensions"
+    "mkdocs-material-extensions",
+    "mkdocs-awesome-pages-plugin",
+    "mkdocs-autolinks-plugin",
+    "mkdocs-pagenav-generator"
 ]
 lint = ["black", "isort"]
 test = ["pytest", "pytest-cookies", "tox"]
@@ -79,7 +85,7 @@ roundbox-admin = "RoundBox.core.cliparser:exec_from_cli"
 "Issues" = "https://github.com/soulraven/roundbox/issues"
 "Discussions" = "https://github.com/soulraven/roundbox/discussions"
 "Documentation" = "https://soulraven.github.io/roundbox/"
-"Changelog" = "https://github.com/soulraven/roundbox/blob/main/CHANGELOG.md"
+"Releases" = "https://soulraven.github.io/roundbox/releases"
 
 [tool.black]
 line_length = 88
