Correct the Makefile and setup.cfg Classifiers. Also correct some link from the README.md

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,9 +12,9 @@ license = GPLv3
 license_file = LICENSE
 classifiers =
     Intended Audience :: Developers
-    Topic :: Software Development :: Libraries'
-    License :: OSI Approved :: GPLv3 License'
-    Operating System :: OS Independent',
+    Topic :: Software Development :: Libraries
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
