--- a/setup.cfg
+++ b/setup.cfg
@@ -52,11 +52,14 @@ console_scripts =
 [options.extras_require]
 docs =
     mkdocs
-    mkdocs-coverage
-    mkdocs-gen-files
-    mkdocs-literate-nav
     mkdocs-material
+    mkdocs-coverage
+    mkdocs-literate-nav
+    mkdocs-gen-files
     mkdocs-material-extensions
+    mkdocs-awesome-pages-plugin
+    mkdocs-autolinks-plugin
+    mkdocs-pagenav-generator
 tests =
     pytest
     pytest-cookies
